Fixes css - speakers were hidden on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -465,10 +465,6 @@ button:focus {
     padding: 15px;
   }
 
-  .categories {
-    display: none;
-  }
-
   .social-icons {
     margin: 0 -15px;
     position: static;
